<resources>
    <string name="app_name">ExploreCity app</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_ninearch">Ninearch</string>
    <string name="title_activity_liptonseat">Liptonseat</string>
    <string name="title_activity_assismbanglow">Assismbanglow</string>
    <string name="title_activity_adisham_banglow">AdishamBanglow</string>
    <string name="title_activity_gps">gps</string>
    <string name="title_activity_our_location_map">OurLocationMap</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">forgot password?</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
</resources>